listar y agregar urbanizaciones

--- a/backend/urbanizations/package.json
+++ b/backend/urbanizations/package.json
@@ -4,14 +4,15 @@
   "description": "micro servicio de urbanizaciones",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon ./app.js localhost 8080",
+    "start": "nodemon ./app.js localhost 3000",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Gabriel Marin",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "firebase-admin": "^9.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
