--- a/backend/urbanizations/package.json
+++ b/backend/urbanizations/package.json
@@ -4,7 +4,8 @@
   "description": "micro servicio de urbanizaciones",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon ./app.js localhost 3000",
+    "start": "node ./app.js",
+    "nodemon": "nodemon ./app.js localhost 3000",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Gabriel Marin",
