--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,11 +1,20 @@
 pipeline {
     agent any
+
     stages {
         stage('Build') {
-            dir('frontend'){
-                steps {
-                    echo 'Building..'
-                }
+            steps {
+                echo 'Building..'
+            }
+        }
+        stage('Test') {
+            steps {
+                echo 'Testing..'
+            }
+        }
+        stage('Deploy') {
+            steps {
+                echo 'Deploying....'
             }
         }
     }
